--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
         }
 
         .left-section img {
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            border: 5px solid #fff;
-        }
+    width: 400px; /* 放大图片宽度 */
+    height: auto; /* 使高度自动调整，保持比例 */
+    border-radius: 0; /* 去掉圆角效果 */
+    border: 5px solid #fff; /* 保留白色边框 */
+}
 
         .right-section {
             flex: 2;
@@ -111,7 +111,7 @@
 </head>
 <body>
     <header>
-        Your Name
+        Yuelu(Niko) Li
     </header>
 
     <nav>
@@ -127,7 +127,7 @@
         <div class="right-section">
             <h1>About Me</h1>
             <p>
-                This is where your introduction goes. You can talk about your background, research interests, and anything you'd like others to know.
+                Yuelu graduated from Yonsei University in South Korea with a major in Media Communication. Currently, she is a MPhil in Computational Media and Arts at HKUST(GZ). Her research focuses primarily on interactive narrative content creation under the intervention of AI agents. Her research area is Human-centered technology for storytelling including interactive storytelling, transmedia storytelling, and AIGC.
             </p>
         </div>
     </div>
@@ -135,10 +135,10 @@
     <div class="news-section">
         <h2>News</h2>
         <div class="news-item">
-            <strong>News Title 1:</strong> Short description of recent updates or news.
+            <strong>News Bridging Audience and Creator: AI- Assisted Insights for Enhanced Interactive Narrative Design:</strong>  In Submission to the 2025 Conference on Computer Supported Cooperative Work and Social Computing (CSCW '25).
         </div>
         <div class="news-item">
-            <strong>News Title 2:</strong> Another update or information about your work.
+            <strong>At the Peak: Guidelines for Creating Climaxes in Data Videos:</strong> Under Review in the 2025 CHI Conference on Human Factors in Computing Systems (CHI '25).
         </div>
         <!-- Add more news items as needed -->
     </div>
@@ -147,8 +147,8 @@
         <div class="right-section">
             <h1>Publications</h1>
             <ul>
-                <li>Publication 1 - <em>Journal Name, Year</em></li>
-                <li>Publication 2 - <em>Journal Name, Year</em></li>
+                <li>Ka-Yan Fung, Lik-Hang Lee, Huamin Qu, Yuelu Li, Shenhui Song, David Kei Man Yip (2024), Create-to-learn paradigm: A proxy visual storytelling tool for stimulating children’s story sense and structure: <em>JAccepted to the 16th International Symposium on Visual Information Communication and Interaction (VINCI '24).</em></li>
+                <li>Yuelu Li, Junrong Song, Chaozhe Zhang, Rongrong Chen, David Kei Man Yip (2024), Comparing the different approaches of LLM with multi-agents to character decision in the Oscar winning Best Picture ‘The Departed’: <em>Accepted to the International Conference of Art Design and Technology (ICADT '24).</em></li>
                 <!-- Add more publications here -->
             </ul>
         </div>
@@ -161,7 +161,7 @@
 
     <footer>
         <p>
-            <a href="mailto:your-email@example.com">Contact Me</a>
+            <a href="mailto:yli883@connect.hkust-gz.edu.cn">Contact Me</a>
         </p>
     </footer>
 </body>
