--- a/index.html
+++ b/index.html
@@ -89,6 +89,16 @@
             font-size: 1.2em;
             text-align: center;
         }
+        
+        .news-item p {
+    margin: 5px 0 20px 0; /* 为描述文本添加上下间距 */
+    font-size: 1em; /* 确保字体大小合适 */
+        }
+
+        .publications-section ul li {
+    margin-bottom: 20px; /* 增加 publication 项目之间的间隔 */
+    font-size: 1.2em; /* 设置字体大小 */
+}
 
         footer {
             background-color: #111;
@@ -135,10 +145,12 @@
     <div class="news-section">
         <h2>News</h2>
         <div class="news-item">
-            <strong>News Bridging Audience and Creator: AI- Assisted Insights for Enhanced Interactive Narrative Design:</strong>  In Submission to the 2025 Conference on Computer Supported Cooperative Work and Social Computing (CSCW '25).
+            <strong>News Bridging Audience and Creator: AI- Assisted Insights for Enhanced Interactive Narrative Design:</strong>
+            <p>In Submission to the 2025 Conference on Computer Supported Cooperative Work and Social Computing (CSCW '25).</p>
         </div>
         <div class="news-item">
-            <strong>At the Peak: Guidelines for Creating Climaxes in Data Videos:</strong> Under Review in the 2025 CHI Conference on Human Factors in Computing Systems (CHI '25).
+            <strong>At the Peak: Guidelines for Creating Climaxes in Data Videos:</strong>
+            <p>Under Review in the 2025 CHI Conference on Human Factors in Computing Systems (CHI '25).</p>
         </div>
         <!-- Add more news items as needed -->
     </div>
@@ -147,8 +159,8 @@
         <div class="right-section">
             <h1>Publications</h1>
             <ul>
-                <li>Ka-Yan Fung, Lik-Hang Lee, Huamin Qu, Yuelu Li, Shenhui Song, David Kei Man Yip (2024), Create-to-learn paradigm: A proxy visual storytelling tool for stimulating children’s story sense and structure: <em>JAccepted to the 16th International Symposium on Visual Information Communication and Interaction (VINCI '24).</em></li>
-                <li>Yuelu Li, Junrong Song, Chaozhe Zhang, Rongrong Chen, David Kei Man Yip (2024), Comparing the different approaches of LLM with multi-agents to character decision in the Oscar winning Best Picture ‘The Departed’: <em>Accepted to the International Conference of Art Design and Technology (ICADT '24).</em></li>
+                <li>Ka-Yan Fung, Lik-Hang Lee, Huamin Qu, <strong>Yuelu Li</strong>, Shenhui Song, David Kei Man Yip (2024), Create-to-learn paradigm: A proxy visual storytelling tool for stimulating children’s story sense and structure: <em>JAccepted to the 16th International Symposium on Visual Information Communication and Interaction (VINCI '24).</em></li>
+                <li><strong>Yuelu Li</strong>, Junrong Song, Chaozhe Zhang, Rongrong Chen, David Kei Man Yip (2024), Comparing the different approaches of LLM with multi-agents to character decision in the Oscar winning Best Picture ‘The Departed’: <em>Accepted to the International Conference of Art Design and Technology (ICADT '24).</em></li>
                 <!-- Add more publications here -->
             </ul>
         </div>
