--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Yuelu(Niko)Li</title>
     <style>
         body {
             margin: 0;
@@ -127,7 +127,7 @@
     <nav>
         <a href="#about">About</a>
         <a href="#publications">Publications</a>
-        <a href="#cv">CV</a>
+        <a href="cv.html">CV</a>
     </nav>
 
     <div class="container" id="about">
@@ -164,11 +164,6 @@
                 <!-- Add more publications here -->
             </ul>
         </div>
-    </div>
-
-    <div class="container" id="cv">
-        <h1>CV</h1>
-        <iframe src="your-cv.pdf"></iframe>
     </div>
 
     <footer>
