--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 
     <div class="container" id="about">
         <div class="left-section">
-            <img src="your-photo.jpg" alt="Your Photo">
+            <img src="yueluli-photo.jpg" alt="Your Photo">
         </div>
         <div class="right-section">
             <h1>About Me</h1>
             <p>
-                Yuelu graduated from Yonsei University in South Korea with a major in Media Communication. Currently, she is a MPhil in Computational Media and Arts at HKUST(GZ). Her research focuses primarily on interactive narrative content creation under the intervention of AI agents. Her research area is Human-centered technology for storytelling including interactive storytelling, transmedia storytelling, and AIGC.
+               Yuelu Li graduated from Yonsei University in South Korea with a major in Media Communication and is currently pursuing an MPhil in Computational Media and Arts at the Hong Kong University of Science and Technology (Guangzhou). She is currently a member of the <a href="https://cat.hkust-gz.edu.cn/" target="_blank">Creative Art Tech (CAT) team</a>, under the supervision of <a href="https://www.daveyip.com/" target="_blank">Professor David Kei Man YIP</a> and co-supervision of <a href="https://cma.hkust-gz.edu.cn/people/luwen-yu/" target="_blank">Professor Luwen Yu</a>. Her research area is Human-centered technology for storytelling including interactive storytelling, transmedia storytelling, and AIGC.
             </p>
         </div>
     </div>
