--- a/index.html
+++ b/index.html
@@ -96,8 +96,22 @@
         }
 
         .publications-section ul li {
-    margin-bottom: 20px; /* 增加 publication 项目之间的间隔 */
+    margin-bottom: 40px; /* 增加 publication 项目之间的间隔 */
     font-size: 1.2em; /* 设置字体大小 */
+}
+        
+        a {
+    color: #00bcd4; /* 设置链接颜色 */
+    text-decoration: none; /* 去掉下划线 */
+}
+        
+        .name-highlight {
+    color: #00bcd4; /* 设置名字的颜色为 #00bcd4 */
+}
+
+
+a:hover {
+    text-decoration: underline; /* 鼠标悬停时显示下划线 */
 }
 
         footer {
@@ -145,7 +159,7 @@
     <div class="news-section">
         <h2>News</h2>
         <div class="news-item">
-            <strong>News Bridging Audience and Creator: AI- Assisted Insights for Enhanced Interactive Narrative Design:</strong>
+            <strong>Bridging Audience and Creator: AI- Assisted Insights for Enhanced Interactive Narrative Design:</strong>
             <p>In Submission to the 2025 Conference on Computer Supported Cooperative Work and Social Computing (CSCW '25).</p>
         </div>
         <div class="news-item">
@@ -159,8 +173,8 @@
         <div class="right-section">
             <h1>Publications</h1>
             <ul>
-                <li>Ka-Yan Fung, Lik-Hang Lee, Huamin Qu, <strong>Yuelu Li</strong>, Shenhui Song, David Kei Man Yip (2024), Create-to-learn paradigm: A proxy visual storytelling tool for stimulating children’s story sense and structure: <em>JAccepted to the 16th International Symposium on Visual Information Communication and Interaction (VINCI '24).</em></li>
-                <li><strong>Yuelu Li</strong>, Junrong Song, Chaozhe Zhang, Rongrong Chen, David Kei Man Yip (2024), Comparing the different approaches of LLM with multi-agents to character decision in the Oscar winning Best Picture ‘The Departed’: <em>Accepted to the International Conference of Art Design and Technology (ICADT '24).</em></li>
+                <li>Ka-Yan Fung, Lik-Hang Lee, Huamin Qu, <strong class="name-highlight">Yuelu Li</strong>, Shenhui Song, David Kei Man Yip (2024), Create-to-learn paradigm: A proxy visual storytelling tool for stimulating children’s story sense and structure: <em>JAccepted to the 16th International Symposium on Visual Information Communication and Interaction (VINCI '24).</em></li>
+                <li><strong class="name-highlight">Yuelu Li</strong>, Junrong Song, Chaozhe Zhang, Rongrong Chen, David Kei Man Yip (2024), Comparing the different approaches of LLM with multi-agents to character decision in the Oscar winning Best Picture ‘The Departed’: <em>Accepted to the International Conference of Art Design and Technology (ICADT '24).</em></li>
                 <!-- Add more publications here -->
             </ul>
         </div>
