--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         .left-section {
             flex: 1;
-            text-align: center;
+            text-align: left; /* 电脑端图片左对齐 */
         }
 
         .left-section img {
@@ -157,7 +157,7 @@
             }
 
             .left-section {
-                text-align: left;
+                text-align: center; /* 手机端图片居中 */
             }
 
             .left-section img {
