--- a/cv.html
+++ b/cv.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <title>CV - Yuelu (Niko) Li</title>
     <style>
         body {
@@ -15,8 +15,9 @@
 
         iframe {
             width: 100%;
-            height: 95vh; /* 调整高度为95vh */
+            height: 85vh; /* 调整 iframe 高度为 85% 的视窗高度 */
             border: none;
+            overflow-y: scroll; /* 确保可以滚动查看整个 PDF */
         }
 
         .back-link {
@@ -39,7 +40,7 @@
             }
 
             iframe {
-                height: 85vh; /* 为小屏幕调整高度，确保有更多顶部空间 */
+                height: 75vh; /* 手机端为 iframe 提供更小的高度，方便显示 */
             }
         }
     </style>
@@ -47,7 +48,7 @@
 <body>
     <a class="back-link" href="index.html">← Back to Home</a>
 
-    <iframe src="yueluli-cv.pdf"></iframe> <!-- 将 "your-cv.pdf" 替换为实际的 PDF 文件路径 -->
+    <iframe src="yueluli-cv.pdf" scrolling="yes"></iframe> <!-- 将 "your-cv.pdf" 替换为实际的 PDF 文件路径 -->
 
 </body>
 </html>
