--- a/cv.html
+++ b/cv.html
@@ -13,13 +13,6 @@
             text-align: center;
         }
 
-        iframe {
-            width: 100%;
-            height: 85vh; /* 调整 iframe 高度为 85% 的视窗高度 */
-            border: none;
-            overflow-y: scroll; /* 确保可以滚动查看整个 PDF */
-        }
-
         .back-link {
             margin: 20px 0;
             display: inline-block;
@@ -32,15 +25,21 @@
             text-decoration: underline;
         }
 
+        embed {
+            width: 100%;
+            height: 95vh; /* 让嵌入的 PDF 文件填满视窗 */
+            border: none;
+        }
+
         /* 针对小屏幕的调整 */
         @media (max-width: 768px) {
             .back-link {
                 font-size: 1em;
-                margin: 10px 0; /* 缩小返回链接的间距 */
+                margin: 10px 0;
             }
 
-            iframe {
-                height: 75vh; /* 手机端为 iframe 提供更小的高度，方便显示 */
+            embed {
+                height: 85vh; /* 为小屏幕设备调整 PDF 嵌入高度 */
             }
         }
     </style>
@@ -48,7 +47,7 @@
 <body>
     <a class="back-link" href="index.html">← Back to Home</a>
 
-    <iframe src="yueluli-cv.pdf" scrolling="yes"></iframe> <!-- 将 "your-cv.pdf" 替换为实际的 PDF 文件路径 -->
-
+    <!-- 使用 embed 标签嵌入 PDF -->
+    <embed src="yueluli-cv.pdf" type="application/pdf" />
 </body>
 </html>
