--- a/cv.html
+++ b/cv.html
@@ -25,7 +25,7 @@
             text-decoration: underline;
         }
 
-        embed {
+        iframe {
             width: 100%;
             height: 95vh; /* 让嵌入的 PDF 文件填满视窗 */
             border: none;
@@ -38,7 +38,7 @@
                 margin: 10px 0;
             }
 
-            embed {
+            iframe {
                 height: 85vh; /* 为小屏幕设备调整 PDF 嵌入高度 */
             }
         }
@@ -46,8 +46,9 @@
 </head>
 <body>
     <a class="back-link" href="index.html">← Back to Home</a>
+    <a class="download-link" href="yueluli-cv.pdf" download>Download CV (PDF)</a>
 
-    <!-- 使用 embed 标签嵌入 PDF -->
-    <embed src="yueluli-cv.pdf" type="application/pdf" />
+    <!-- 使用 iframe 标签嵌入 PDF -->
+    <iframe src="yueluli-cv.pdf"></iframe>
 </body>
 </html>
